--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@babel/preset-env": "^7.7.6",
     "autoprefixer": "^9.7.3",
     "babel-core": "^6.26.3",
+    "babel-eslint": "^10.0.3",
     "babel-loader": "^8.0.6",
     "babel-polyfill": "^6.26.0",
     "chalk": "^1.1.3",
@@ -39,10 +40,23 @@
     "core-js": "^2.6.5",
     "cross-env": "^5.0.0",
     "css-loader": "^3.3.0",
+    "eslint": "^6.7.2",
+    "eslint-config-airbnb-base": "^14.0.0",
+    "eslint-config-standard": "^12.0.0",
+    "eslint-config-vue": "^2.0.2",
+    "eslint-friendly-formatter": "^4.0.1",
+    "eslint-plugin-babel": "^5.3.0",
+    "eslint-plugin-html": "^3.0.0",
+    "eslint-plugin-import": "^2.17.3",
+    "eslint-plugin-node": "^9.1.0",
+    "eslint-plugin-promise": "^4.1.1",
+    "eslint-plugin-standard": "^4.0.0",
+    "eslint-plugin-vue": "^5.0.0-beta.6",
     "express": "^4.14.0",
     "figures": "^2.0.0",
     "file-loader": "^5.0.2",
     "fs-extra": "^8.0.1",
+    "happypack": "^5.0.1",
     "html-webpack-plugin": "^3.2.0",
     "ip": "^1.1.5",
     "mini-css-extract-plugin": "^0.8.0",
