--- a/.eslintrc
+++ b/.eslintrc
@@ -1,16 +1,14 @@
 {
   "root": true,
   "parser": "babel-eslint",
+  "parserOptions": {
+    "sourceType": "module"
+  },
   "extends": [
-    "plugin:vue/essential"
+    "standard"
   ],
   "plugins": [
-    // "babel",
-    "html",
-    // "promise",
-    "vue"
-    // "flow-vars",
-    // "react"
+    "babel"
   ],
   "env": {
     "browser": true,
@@ -25,11 +23,10 @@
   },
   "rules": {
     "no-multiple-empty-lines": [1, {
-      "max": 2
+      "max": 1
     }], //空行最多不能超过2行
     "space-before-function-paren": 0, // 函数定义时括号前面要不要有空格
     "generator-star-spacing": 0,
-    "eqeqeq": 0, // 必须使用全等
     "key-spacing": "off",
     "max-len": [2, 120, 2],
     "object-curly-spacing": [2, "always"],
