--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "promise": "^7.1.1",
     "vue": "^2.6.10",
     "vue-router": "^3.1.3",
+    "vuex": "^3.1.2",
     "whatwg-fetch": "^2.0.3"
   },
   "devDependencies": {
