--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "author": "haiming.zhao",
   "license": "ISC",
   "dependencies": {
+    "ant-design-vue": "^1.4.10",
     "axios": "^0.19.0",
     "nprogress": "^0.2.0",
     "object-assign": "^4.1.1",
@@ -35,6 +36,7 @@
     "babel-core": "^6.26.3",
     "babel-eslint": "^10.0.3",
     "babel-loader": "^8.0.6",
+    "babel-plugin-import": "^1.13.0",
     "babel-polyfill": "^6.26.0",
     "chalk": "^1.1.3",
     "compression": "^1.7.4",
