--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "compile": "node build/script/compile",
     "build": "npm run clean && cross-env NODE_ENV=production npm run compile",
     "start": "cross-env NODE_ENV=development node build/script/start",
-    "lint": "eslint --ext .js src/",
-    "lint:fix": "eslint --fix --ext .js --ext .jsx src/"
+    "lint": "eslint --ext .js,.vue src/",
+    "lint:fix": "eslint --fix --ext .js --ext .vue --ext .jsx src/"
   },
   "keywords": [],
   "author": "haiming.zhao",
@@ -43,18 +43,10 @@
     "core-js": "^2.6.5",
     "cross-env": "^5.0.0",
     "css-loader": "^3.3.0",
-    "eslint": "^6.7.2",
-    "eslint-config-airbnb-base": "^14.0.0",
-    "eslint-config-standard": "^12.0.0",
-    "eslint-config-vue": "^2.0.2",
-    "eslint-friendly-formatter": "^4.0.1",
-    "eslint-plugin-babel": "^5.3.0",
-    "eslint-plugin-html": "^3.0.0",
-    "eslint-plugin-import": "^2.17.3",
-    "eslint-plugin-node": "^9.1.0",
-    "eslint-plugin-promise": "^4.1.1",
-    "eslint-plugin-standard": "^4.0.0",
-    "eslint-plugin-vue": "^5.0.0-beta.6",
+    "eslint": "4.19.1",
+    "eslint-loader": "2.0.0",
+    "eslint-plugin-vue": "4.7.1",
+    "eslint-friendly-formatter": "4.0.1",
     "express": "^4.14.0",
     "figures": "^2.0.0",
     "file-loader": "^5.0.2",
